FIX THE DODGY SCROLLBAR

--- a/stylesheets/test-status.less
+++ b/stylesheets/test-status.less
@@ -3,8 +3,8 @@
 
 .test-status-output {
   .message {
-    height: 150px;
-    overflow: scroll;
+    max-height: 150px;
+    overflow-y: scroll;
   }
 
   pre {
